remove shipping component

--- a/src/route/Checkout/Checkout.component.style.scss
+++ b/src/route/Checkout/Checkout.component.style.scss
@@ -39,6 +39,7 @@
   
   .stepper-item .step-counter {
     position: relative;
+    color: $white;
     z-index: 5;
     display: flex;
     justify-content: center;
